# bloom-filter-rs

./: Cargo.toml  README.md
examples/: accuracy_benchmark.rs
src/: accuracy.rs  bit_array.rs  filter.rs  hash.rs  lib.rs  params.rs
tests/: accuracy.rs  correctness.rs
