[package]
name = "bloom_filter_rs"
version = "0.1.0"
edition = "2021"
description = "A bloom filter implementation focused on correctness and minimal false positive rates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RaveenaBhasin/bloom-filter-rs"
keywords = ["bloom-filter", "probabilistic", "data-structure", "accuracy"]
categories = ["data-structures", "algorithms"]

[dependencies]
ahash = "0.8"
seahash = "4.1"

[dev-dependencies]
rand = "0.8"

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
